--- a/jupyter-notebook/r_uvod.ipynb
+++ b/jupyter-notebook/r_uvod.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -120,7 +120,7 @@
    "source": [
     "Naravno, kao i u pješačkoj matematici, i u R-u je potrebno paziti na grupiranje matematičkih izraza.\n",
     "\n",
-    "`x + y / z` je $ x + (y / z) $ je $ x + \\frac{z}{y} $\n",
+    "`x + y / z` je $ x + (y / z) $ je $ x + \\frac{y}{z} $\n",
     "\n",
     "`(x + y) / z` je $ (x + y) / z $ je $ \\frac{x+y}{z} $."
    ]
@@ -189,7 +189,7 @@
     "# navodnici su bitni! ali mogu biti jednostruki ili dvostruki,\n",
     "# bitno je samo da je riječ omeđena jednakim parom\n",
     "# npr 'a' je oke, \"a' nije oke, ali zato \"a\" je\n",
-    "print(c('patka', \"krava\", 'pile', \"pesa\"))\n",
+    "print(c('patka', \"krava\", 'pile', \"pas\"))\n",
     "\n",
     "print(c(5, 4, 3, 2, 1))"
    ]
@@ -379,7 +379,7 @@
    },
    "outputs": [],
    "source": [
-    "domace_zivotinje <- c('patka', 'krava', 'pile', 'pesa')\n",
+    "domace_zivotinje <- c('patka', 'krava', 'pile', 'pas')\n",
     "\n",
     "brojevi.5.do.1 <- c(5, 4, 3, 2, 1)"
    ]
@@ -927,10 +927,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.frame('brojke' = c(1, 2, 3, 4, 5),\n",
+    "print(data.frame('brojke' = c(1, 2, 3, 4, 5),\n",
     "           'slova' = c('a', 'b', 'de', 'ce', 'fe'),\n",
     "           # maknuli smo zadnjji element (F) iz stupca 'logike'\n",
-    "           'logike'= c(F, F, T, T))"
+    "           'logike'= c(F, F, T, T)))"
    ]
   },
   {
@@ -950,10 +950,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.frame('brojke' = c(1, 2, 3, 4, 5),\n",
+    "print(data.frame('brojke' = c(1, 2, 3, 4, 5),\n",
     "           'slova' = c('a', 'b', 'de', 'ce', 'fe'),\n",
     "           # umjesto posljednjeg elementa u stupcu 'logike' stavili smo NA\n",
-    "           'logike'= c(F, F, T, T, NA))"
+    "           'logike'= c(F, F, T, T, NA)))"
    ]
   },
   {
@@ -969,9 +969,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>brojke</th><th scope=col>slova</th><th scope=col>logike</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 1   </td><td>a    </td><td>FALSE</td></tr>\n",
+       "\t<tr><td> 2   </td><td>b    </td><td>FALSE</td></tr>\n",
+       "\t<tr><td> 3   </td><td>c    </td><td> TRUE</td></tr>\n",
+       "\t<tr><td> 4   </td><td>d    </td><td> TRUE</td></tr>\n",
+       "\t<tr><td> 5   </td><td>e    </td><td>   NA</td></tr>\n",
+       "\t<tr><td> 6   </td><td>f    </td><td>FALSE</td></tr>\n",
+       "\t<tr><td> 7   </td><td>g    </td><td>FALSE</td></tr>\n",
+       "\t<tr><td> 8   </td><td>h    </td><td> TRUE</td></tr>\n",
+       "\t<tr><td> 9   </td><td>i    </td><td> TRUE</td></tr>\n",
+       "\t<tr><td>10   </td><td>j    </td><td>   NA</td></tr>\n",
+       "\t<tr><td>11   </td><td>k    </td><td>FALSE</td></tr>\n",
+       "\t<tr><td>12   </td><td>l    </td><td>FALSE</td></tr>\n",
+       "\t<tr><td>13   </td><td>m    </td><td> TRUE</td></tr>\n",
+       "\t<tr><td>14   </td><td>n    </td><td> TRUE</td></tr>\n",
+       "\t<tr><td>15   </td><td>o    </td><td>   NA</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       " brojke & slova & logike\\\\\n",
+       "\\hline\n",
+       "\t  1    & a     & FALSE\\\\\n",
+       "\t  2    & b     & FALSE\\\\\n",
+       "\t  3    & c     &  TRUE\\\\\n",
+       "\t  4    & d     &  TRUE\\\\\n",
+       "\t  5    & e     &    NA\\\\\n",
+       "\t  6    & f     & FALSE\\\\\n",
+       "\t  7    & g     & FALSE\\\\\n",
+       "\t  8    & h     &  TRUE\\\\\n",
+       "\t  9    & i     &  TRUE\\\\\n",
+       "\t 10    & j     &    NA\\\\\n",
+       "\t 11    & k     & FALSE\\\\\n",
+       "\t 12    & l     & FALSE\\\\\n",
+       "\t 13    & m     &  TRUE\\\\\n",
+       "\t 14    & n     &  TRUE\\\\\n",
+       "\t 15    & o     &    NA\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "brojke | slova | logike | \n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "|  1    | a     | FALSE | \n",
+       "|  2    | b     | FALSE | \n",
+       "|  3    | c     |  TRUE | \n",
+       "|  4    | d     |  TRUE | \n",
+       "|  5    | e     |    NA | \n",
+       "|  6    | f     | FALSE | \n",
+       "|  7    | g     | FALSE | \n",
+       "|  8    | h     |  TRUE | \n",
+       "|  9    | i     |  TRUE | \n",
+       "| 10    | j     |    NA | \n",
+       "| 11    | k     | FALSE | \n",
+       "| 12    | l     | FALSE | \n",
+       "| 13    | m     |  TRUE | \n",
+       "| 14    | n     |  TRUE | \n",
+       "| 15    | o     |    NA | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   brojke slova logike\n",
+       "1   1     a     FALSE \n",
+       "2   2     b     FALSE \n",
+       "3   3     c      TRUE \n",
+       "4   4     d      TRUE \n",
+       "5   5     e        NA \n",
+       "6   6     f     FALSE \n",
+       "7   7     g     FALSE \n",
+       "8   8     h      TRUE \n",
+       "9   9     i      TRUE \n",
+       "10 10     j        NA \n",
+       "11 11     k     FALSE \n",
+       "12 12     l     FALSE \n",
+       "13 13     m      TRUE \n",
+       "14 14     n      TRUE \n",
+       "15 15     o        NA "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "brojke_i_slova <-\n",
     "           # osim korištenjem funkcije c(), vektore brojeva možemo stavarati\n",
@@ -982,7 +1072,7 @@
     "           'slova' = letters[1:15],\n",
     "           'logike'= c(F, F, T, T, NA))\n",
     "\n",
-    "brojke_i_slova"
+    "print(brojke_i_slova)"
    ]
   },
   {
@@ -1069,12 +1159,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>brojke</th><th scope=col>logike</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td> 1   </td><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td> 2   </td><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td> 3   </td><td> TRUE</td></tr>\n",
+       "\t<tr><th scope=row>7</th><td> 7   </td><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>8</th><td> 8   </td><td> TRUE</td></tr>\n",
+       "\t<tr><th scope=row>9</th><td> 9   </td><td> TRUE</td></tr>\n",
+       "\t<tr><th scope=row>10</th><td>10   </td><td>   NA</td></tr>\n",
+       "\t<tr><th scope=row>11</th><td>11   </td><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>12</th><td>12   </td><td>FALSE</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ll}\n",
+       "  & brojke & logike\\\\\n",
+       "\\hline\n",
+       "\t1 &  1    & FALSE\\\\\n",
+       "\t2 &  2    & FALSE\\\\\n",
+       "\t3 &  3    &  TRUE\\\\\n",
+       "\t7 &  7    & FALSE\\\\\n",
+       "\t8 &  8    &  TRUE\\\\\n",
+       "\t9 &  9    &  TRUE\\\\\n",
+       "\t10 & 10    &    NA\\\\\n",
+       "\t11 & 11    & FALSE\\\\\n",
+       "\t12 & 12    & FALSE\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | brojke | logike | \n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 |  1    | FALSE | \n",
+       "| 2 |  2    | FALSE | \n",
+       "| 3 |  3    |  TRUE | \n",
+       "| 7 |  7    | FALSE | \n",
+       "| 8 |  8    |  TRUE | \n",
+       "| 9 |  9    |  TRUE | \n",
+       "| 10 | 10    |    NA | \n",
+       "| 11 | 11    | FALSE | \n",
+       "| 12 | 12    | FALSE | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   brojke logike\n",
+       "1   1     FALSE \n",
+       "2   2     FALSE \n",
+       "3   3      TRUE \n",
+       "7   7     FALSE \n",
+       "8   8      TRUE \n",
+       "9   9      TRUE \n",
+       "10 10        NA \n",
+       "11 11     FALSE \n",
+       "12 12     FALSE "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# prva tri reda i redovi 7 do 12, te stupci 1 i 3\n",
-    "brojke_i_slova[c(1:3, 7:12), c(1, 3)]"
+    "print(brojke_i_slova[c(1:3, 7:12), c(1, 3)])"
    ]
   },
   {
@@ -1094,7 +1250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brojke_i_slova[1:3, c('logike', 'brojke')]"
+    "print(brojke_i_slova[1:3, c('logike', 'brojke')])"
    ]
   },
   {
@@ -1130,9 +1286,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data.frame':\t15 obs. of  3 variables:\n",
+      " $ brojke: int  1 2 3 4 5 6 7 8 9 10 ...\n",
+      " $ slova : Factor w/ 15 levels \"a\",\"b\",\"c\",\"d\",..: 1 2 3 4 5 6 7 8 9 10 ...\n",
+      " $ logike: logi  FALSE FALSE TRUE TRUE NA FALSE ...\n"
+     ]
+    }
+   ],
    "source": [
     "str(brojke_i_slova)"
    ]
@@ -1582,7 +1749,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1733,13 +1900,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     [,1]          [,2] \n",
+      "[1,] \"Neo\"         \"150\"\n",
+      "[2,] \"Morpheus\"    \"165\"\n",
+      "[3,] \"Agent Smith\" \"140\"\n"
+     ]
+    }
+   ],
    "source": [
     "postava <- matrix(c('Neo', 150, 'Morpheus', 165, 'Agent Smith', 140),\n",
     "             # broj redova i stupaca matrice\n",
@@ -1763,9 +1941,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>3</li>\n",
+       "\t<li>2</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 3\n",
+       "\\item 2\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 3\n",
+       "2. 2\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 3 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dim(postava)"
    ]
@@ -1783,13 +1989,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        ime           visina\n",
+      "lepi    \"Neo\"         \"150\" \n",
+      "pametni \"Morpheus\"    \"165\" \n",
+      "zli     \"Agent Smith\" \"140\" \n"
+     ]
+    }
+   ],
    "source": [
     "dimnames(postava) <- list(\n",
     "    # imena redova\n",
@@ -1812,13 +2029,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"lepi\"    \"pametni\" \"zli\"    \n",
+      "[1] \"ime\"    \"visina\"\n"
+     ]
+    }
+   ],
    "source": [
     "print(rownames(postava))\n",
     "\n",
@@ -1838,13 +2064,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>'brojke'</li>\n",
+       "\t<li>'slova'</li>\n",
+       "\t<li>'logike'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'brojke'\n",
+       "\\item 'slova'\n",
+       "\\item 'logike'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'brojke'\n",
+       "2. 'slova'\n",
+       "3. 'logike'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"brojke\" \"slova\"  \"logike\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in eval(expr, envir, enclos): object 'raznoliki_objekti' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(expr, envir, enclos): object 'raznoliki_objekti' not found\nTraceback:\n"
+     ]
+    }
+   ],
    "source": [
     "names(brojke_i_slova)\n",
     "\n",
@@ -1861,16 +2126,106 @@
     }
    },
    "source": [
-    "Elementima možemo pristupati pomoću `[]` operatora (po istom principu kao i kod `data.framea`), ali ne i pomoću `$` operatora."
+    "Elementima možemo pristupati pomoću `[]` operatora, ali ne i pomoću `$` operatora. Također, pristupanje elementima pomoću indeksa nije isto kao kod `data.framea`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Naša matrica `postava` ima 3 reda i dva stupca. Pogledajmo sljedeći primjer:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Neo\"         \"Morpheus\"    \"Agent Smith\" \"150\"        \n"
+     ]
+    }
+   ],
    "source": [
+    "# matrica manje od 4 reda i manje od 4 stupca.\n",
+    "# ipak, ovo funkcionira\n",
+    "print(postava[1:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        ime           visina\n",
+      "pametni \"Morpheus\"    \"165\" \n",
+      "zli     \"Agent Smith\" \"140\" \n"
+     ]
+    }
+   ],
+   "source": [
+    "# ovo također funkcionira\n",
+    "print(postava[2:3, 1:2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "U ovom slučaju, redovima su prikačena njihova imena."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      pametni           zli \n",
+      "   \"Morpheus\" \"Agent Smith\" \n"
+     ]
+    }
+   ],
+   "source": [
+    "# i ovo\n",
     "print(postava[2:3, 'ime'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "Ovdje se imena \"redova\" nalaze iznad svake vraćene vrijednosti (dakle, iznad `\"Morpheus\"` i `\"Agent Smith\"`)"
    ]
   },
   {
