--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -8,3 +8,5 @@ Trneutačno dostupni tutoriali u sklopu Rdionice su:
 
 - [Uvod u R](https://vdeni.github.io/rdionica/r_uvod.html) 
 - [Priprema podataka koristeći `tidyverse`](https://vdeni.github.io/rdionica/priprema_podaci_upitnik.html)
+
+Svi materijali (kod, podaci i slično) dostupni su [ovdje](https://github.com/vdeni/rdionica).
