riješio pravilan prikaz lista

--- a/jupyter-notebook/r_uvod.ipynb
+++ b/jupyter-notebook/r_uvod.ipynb
@@ -1400,7 +1400,7 @@
    "source": [
     "U kodu gore, `ordered` i `levels` su imenovani (named) argumenti. Imenovani argumenti se razlikuju od pozicijskih (eng. *positional*) po tome što nije bitno kojim ih redoslijedom postavljamo. Isti efekt dobili bismo da smo prvo napisali `levels`, a potom `ordered`.\n",
     "\n",
-    "Nekad se možemo izvući bez da argumente imenujemo, ali nekad će R baciti error, tako da tu razliku treba imati na umu."
+    "Nekad se možemo izvući bez da argumente imenujemo, ali nekad će R baciti error ili napraviti nešto, ali ne ono što očekujemo, tako da tu razliku treba imati na umu."
    ]
   },
   {
