popravljanje manjih grešaka

--- a/jupyter-notebook/priprema_podaci_upitnik.ipynb
+++ b/jupyter-notebook/priprema_podaci_upitnik.ipynb
@@ -3059,7 +3059,7 @@
    "outputs": [],
    "source": [
     "sifre %>%\n",
-    "stringr::str_detect(., '[[:upper:]]{2}\\\\d{2}(ZG|ST)')"
+    "stringr::str_subset(., '\\\\w{2}\\\\d+(ZG|ST|ZA|SP)')"
    ]
   },
   {
@@ -3680,7 +3680,7 @@
     "```\n",
     "case_when(logički-izraz ~ akcija-ako-TRUE,\n",
     "          logički-izraz-2 ~ akcija-ako-TRUE-2)\n",
-    "          ```"
+    "```"
    ]
   },
   {
