--- a/jupyter-notebook/r_uvod.ipynb
+++ b/jupyter-notebook/r_uvod.ipynb
@@ -2154,7 +2154,7 @@
     }
    ],
    "source": [
-    "# matrica manje od 4 reda i manje od 4 stupca.\n",
+    "# matrica ima manje od 4 reda i manje od 4 stupca.\n",
     "# ipak, ovo funkcionira\n",
     "print(postava[1:4])"
    ]
