popravljanje manjih bedastoća s naslovima

--- a/jupyter-notebook/priprema_podaci_upitnik.ipynb
+++ b/jupyter-notebook/priprema_podaci_upitnik.ipynb
@@ -3731,7 +3731,7 @@
     }
    },
    "source": [
-    "# Preimenovanje varijabli"
+    "### Preimenovanje varijabli"
    ]
   },
   {
@@ -5059,7 +5059,7 @@
     }
    },
    "source": [
-    "## Motivacijski primjeri - vizualizacija podataka"
+    "# Motivacijski primjeri - vizualizacija podataka"
    ]
   },
   {
@@ -5484,7 +5484,7 @@
     }
    },
    "source": [
-    "## Motivacijski primjeri - missing data"
+    "# Motivacijski primjeri - missing data"
    ]
   },
   {
@@ -6397,7 +6397,7 @@
     }
    },
    "source": [
-    "## Prtljanje po podacima iz SPSS-a za opće dobro"
+    "# Prtljanje po podacima iz SPSS-a za opće dobro"
    ]
   },
   {
@@ -6856,7 +6856,7 @@
     }
    },
    "source": [
-    "## Reference i dodatna literatura"
+    "# Reference i dodatna literatura"
    ]
   },
   {
