dodao Mirka, popravio neke sitnice

--- a/jupyter-notebook/r_uvod.ipynb
+++ b/jupyter-notebook/r_uvod.ipynb
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kad god smo dosad izvršavali neke funkcije, baratali smo konkretnim vrijednostima (npr. `2 + 2`), a rezultati su ostali lebdjeti u eteru, nedostupni običnim ljudima.\n",
+    "Kad god smo dosad izvršavali neke funkcije, baratali smo konkretnim vrijednostima (npr. `2 + 2`), a rezultati su ostali lebdjeti negdje u eteru.\n",
     "\n",
     "Kako bismo mogli baratati proizovljnim vrijednostima te kako bismo rezultati izvukli iz etera, uvodimo **varijable**."
    ]
@@ -296,7 +296,7 @@
     }
    },
    "source": [
-    "Imena varijabli mogu sadržavati slova, brojeve, točke (`.`) i underscoreove (čija hrvatska imena ne znam; `_`). Imena varijabli ne mogu započinjati s točkom koju prati broj. Na primjer:"
+    "Imena varijabli **mogu** sadržavati slova, brojeve, točke (`.`) i underscoreove (čije hrvatsko ime ne znam; `_`). Imena varijabli **ne mogu** započinjati s točkom koju prati broj. Na primjer:"
    ]
   },
   {
@@ -421,7 +421,7 @@
     }
    },
    "source": [
-    "Sad kad smo svoje vektore pripisali varijablama, možemo dohvaćati pojedine vrijednosti iz njih. Na primjer, ako želimo dohvatiti prvu vrijednost iz vektora `domace_zivotinje`, možemo učiniti ovo:"
+    "Sad kad smo svoje vektore pripisali varijablama, možemo dohvaćati pojedine vrijednosti iz njih. Na primjer, ako želimo dohvatiti četvrtu vrijednost iz vektora `domace_zivotinje`, možemo učiniti ovo:"
    ]
   },
   {
@@ -489,7 +489,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# dohvaćanje pomoću indeksa\n",
@@ -500,6 +502,20 @@
     "\n",
     "# iskoristit ćemo priliku i pokazati kako možemo usporediti dvije vrijednosti\n",
     "domace_zivotinje[4] == domace_zivotinje[length(domace_zivotinje)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<center>\n",
+    "\n",
+    "<img src=\"../images/IMG-20181101-WA0011.jpg\" alt=\"Drawing\" style=\"height: 600px;\"/>\n",
+    "</center>"
    ]
   },
   {
@@ -969,99 +985,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th scope=col>brojke</th><th scope=col>slova</th><th scope=col>logike</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td> 1   </td><td>a    </td><td>FALSE</td></tr>\n",
-       "\t<tr><td> 2   </td><td>b    </td><td>FALSE</td></tr>\n",
-       "\t<tr><td> 3   </td><td>c    </td><td> TRUE</td></tr>\n",
-       "\t<tr><td> 4   </td><td>d    </td><td> TRUE</td></tr>\n",
-       "\t<tr><td> 5   </td><td>e    </td><td>   NA</td></tr>\n",
-       "\t<tr><td> 6   </td><td>f    </td><td>FALSE</td></tr>\n",
-       "\t<tr><td> 7   </td><td>g    </td><td>FALSE</td></tr>\n",
-       "\t<tr><td> 8   </td><td>h    </td><td> TRUE</td></tr>\n",
-       "\t<tr><td> 9   </td><td>i    </td><td> TRUE</td></tr>\n",
-       "\t<tr><td>10   </td><td>j    </td><td>   NA</td></tr>\n",
-       "\t<tr><td>11   </td><td>k    </td><td>FALSE</td></tr>\n",
-       "\t<tr><td>12   </td><td>l    </td><td>FALSE</td></tr>\n",
-       "\t<tr><td>13   </td><td>m    </td><td> TRUE</td></tr>\n",
-       "\t<tr><td>14   </td><td>n    </td><td> TRUE</td></tr>\n",
-       "\t<tr><td>15   </td><td>o    </td><td>   NA</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|lll}\n",
-       " brojke & slova & logike\\\\\n",
-       "\\hline\n",
-       "\t  1    & a     & FALSE\\\\\n",
-       "\t  2    & b     & FALSE\\\\\n",
-       "\t  3    & c     &  TRUE\\\\\n",
-       "\t  4    & d     &  TRUE\\\\\n",
-       "\t  5    & e     &    NA\\\\\n",
-       "\t  6    & f     & FALSE\\\\\n",
-       "\t  7    & g     & FALSE\\\\\n",
-       "\t  8    & h     &  TRUE\\\\\n",
-       "\t  9    & i     &  TRUE\\\\\n",
-       "\t 10    & j     &    NA\\\\\n",
-       "\t 11    & k     & FALSE\\\\\n",
-       "\t 12    & l     & FALSE\\\\\n",
-       "\t 13    & m     &  TRUE\\\\\n",
-       "\t 14    & n     &  TRUE\\\\\n",
-       "\t 15    & o     &    NA\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "brojke | slova | logike | \n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "|  1    | a     | FALSE | \n",
-       "|  2    | b     | FALSE | \n",
-       "|  3    | c     |  TRUE | \n",
-       "|  4    | d     |  TRUE | \n",
-       "|  5    | e     |    NA | \n",
-       "|  6    | f     | FALSE | \n",
-       "|  7    | g     | FALSE | \n",
-       "|  8    | h     |  TRUE | \n",
-       "|  9    | i     |  TRUE | \n",
-       "| 10    | j     |    NA | \n",
-       "| 11    | k     | FALSE | \n",
-       "| 12    | l     | FALSE | \n",
-       "| 13    | m     |  TRUE | \n",
-       "| 14    | n     |  TRUE | \n",
-       "| 15    | o     |    NA | \n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "   brojke slova logike\n",
-       "1   1     a     FALSE \n",
-       "2   2     b     FALSE \n",
-       "3   3     c      TRUE \n",
-       "4   4     d      TRUE \n",
-       "5   5     e        NA \n",
-       "6   6     f     FALSE \n",
-       "7   7     g     FALSE \n",
-       "8   8     h      TRUE \n",
-       "9   9     i      TRUE \n",
-       "10 10     j        NA \n",
-       "11 11     k     FALSE \n",
-       "12 12     l     FALSE \n",
-       "13 13     m      TRUE \n",
-       "14 14     n      TRUE \n",
-       "15 15     o        NA "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "brojke_i_slova <-\n",
     "           # osim korištenjem funkcije c(), vektore brojeva možemo stavarati\n",
@@ -1108,7 +1034,7 @@
    "outputs": [],
    "source": [
     "# svi stupci prvog  reda\n",
-    "brojke_i_slova[1, ]"
+    "print(brojke_i_slova[1, ])"
    ]
   },
   {
@@ -1122,7 +1048,7 @@
    "outputs": [],
    "source": [
     "# svi redovi prvog stupca\n",
-    "brojke_i_slova[, 1]"
+    "print(brojke_i_slova[, 1])"
    ]
   },
   {
@@ -1143,7 +1069,7 @@
    "outputs": [],
    "source": [
     "# prva tri reda, svi stupci\n",
-    "brojke_i_slova[1:3, ]"
+    "print(brojke_i_slova[1:3, ])"
    ]
   },
   {
@@ -1159,75 +1085,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th></th><th scope=col>brojke</th><th scope=col>logike</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td> 1   </td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td> 2   </td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td> 3   </td><td> TRUE</td></tr>\n",
-       "\t<tr><th scope=row>7</th><td> 7   </td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>8</th><td> 8   </td><td> TRUE</td></tr>\n",
-       "\t<tr><th scope=row>9</th><td> 9   </td><td> TRUE</td></tr>\n",
-       "\t<tr><th scope=row>10</th><td>10   </td><td>   NA</td></tr>\n",
-       "\t<tr><th scope=row>11</th><td>11   </td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>12</th><td>12   </td><td>FALSE</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|ll}\n",
-       "  & brojke & logike\\\\\n",
-       "\\hline\n",
-       "\t1 &  1    & FALSE\\\\\n",
-       "\t2 &  2    & FALSE\\\\\n",
-       "\t3 &  3    &  TRUE\\\\\n",
-       "\t7 &  7    & FALSE\\\\\n",
-       "\t8 &  8    &  TRUE\\\\\n",
-       "\t9 &  9    &  TRUE\\\\\n",
-       "\t10 & 10    &    NA\\\\\n",
-       "\t11 & 11    & FALSE\\\\\n",
-       "\t12 & 12    & FALSE\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "| <!--/--> | brojke | logike | \n",
-       "|---|---|---|---|---|---|---|---|---|\n",
-       "| 1 |  1    | FALSE | \n",
-       "| 2 |  2    | FALSE | \n",
-       "| 3 |  3    |  TRUE | \n",
-       "| 7 |  7    | FALSE | \n",
-       "| 8 |  8    |  TRUE | \n",
-       "| 9 |  9    |  TRUE | \n",
-       "| 10 | 10    |    NA | \n",
-       "| 11 | 11    | FALSE | \n",
-       "| 12 | 12    | FALSE | \n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "   brojke logike\n",
-       "1   1     FALSE \n",
-       "2   2     FALSE \n",
-       "3   3      TRUE \n",
-       "7   7     FALSE \n",
-       "8   8      TRUE \n",
-       "9   9      TRUE \n",
-       "10 10        NA \n",
-       "11 11     FALSE \n",
-       "12 12     FALSE "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# prva tri reda i redovi 7 do 12, te stupci 1 i 3\n",
     "print(brojke_i_slova[c(1:3, 7:12), c(1, 3)])"
@@ -1286,20 +1146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'data.frame':\t15 obs. of  3 variables:\n",
-      " $ brojke: int  1 2 3 4 5 6 7 8 9 10 ...\n",
-      " $ slova : Factor w/ 15 levels \"a\",\"b\",\"c\",\"d\",..: 1 2 3 4 5 6 7 8 9 10 ...\n",
-      " $ logike: logi  FALSE FALSE TRUE TRUE NA FALSE ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "str(brojke_i_slova)"
    ]
@@ -1781,17 +1630,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Kao što možemo vidjeti, razlika između `[[]]` i `[]` gubi se kad se spustimo na najnižu razinu, tj. na dohvaćanje pojedinih elemenata vektora `glumci`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "subslide"
     }
    },
@@ -1862,7 +1700,7 @@
     }
    },
    "source": [
-    "Ovu ponešto supitlnu i prepredenu razliku se isplati imati a umu jer različite funkcije očekuju različite inpute, a lako im je nesvjesno gurati nešto što ne žele (na primjer listu umjesto `data.framea` koji se nalazi u listi)."
+    "Ovu ponešto suptilnu i prepredenu razliku se isplati imati na umu jer različite funkcije očekuju različite inpute, a lako im je nesvjesno gurati nešto što ne žele (na primjer listu umjesto `data.framea` koji se nalazi u listi)."
    ]
   },
   {
@@ -1900,24 +1738,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     [,1]          [,2] \n",
-      "[1,] \"Neo\"         \"150\"\n",
-      "[2,] \"Morpheus\"    \"165\"\n",
-      "[3,] \"Agent Smith\" \"140\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "postava <- matrix(c('Neo', 150, 'Morpheus', 165, 'Agent Smith', 140),\n",
     "             # broj redova i stupaca matrice\n",
@@ -1941,37 +1768,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>3</li>\n",
-       "\t<li>2</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 3\n",
-       "\\item 2\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 3\n",
-       "2. 2\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 3 2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dim(postava)"
    ]
@@ -1989,24 +1788,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        ime           visina\n",
-      "lepi    \"Neo\"         \"150\" \n",
-      "pametni \"Morpheus\"    \"165\" \n",
-      "zli     \"Agent Smith\" \"140\" \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dimnames(postava) <- list(\n",
     "    # imena redova\n",
@@ -2029,22 +1817,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"lepi\"    \"pametni\" \"zli\"    \n",
-      "[1] \"ime\"    \"visina\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(rownames(postava))\n",
     "\n",
@@ -2064,57 +1843,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>'brojke'</li>\n",
-       "\t<li>'slova'</li>\n",
-       "\t<li>'logike'</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'brojke'\n",
-       "\\item 'slova'\n",
-       "\\item 'logike'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'brojke'\n",
-       "2. 'slova'\n",
-       "3. 'logike'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] \"brojke\" \"slova\"  \"logike\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "Error in eval(expr, envir, enclos): object 'raznoliki_objekti' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in eval(expr, envir, enclos): object 'raznoliki_objekti' not found\nTraceback:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names(brojke_i_slova)\n",
     "\n",
     "# također, liste\n",
-    "\n",
     "names(raznoliki_objekti)"
    ]
   },
@@ -2142,17 +1881,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"Neo\"         \"Morpheus\"    \"Agent Smith\" \"150\"        \n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# matrica ima manje od 4 reda i manje od 4 stupca.\n",
     "# ipak, ovo funkcionira\n",
@@ -2161,23 +1894,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        ime           visina\n",
-      "pametni \"Morpheus\"    \"165\" \n",
-      "zli     \"Agent Smith\" \"140\" \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ovo također funkcionira\n",
     "print(postava[2:3, 1:2])"
@@ -2196,22 +1919,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      pametni           zli \n",
-      "   \"Morpheus\" \"Agent Smith\" \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# i ovo\n",
     "print(postava[2:3, 'ime'])"
@@ -2266,7 +1980,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
