manje izmjene u kodu za pripremu podataka

--- a/jupyter-notebook/priprema_podaci_upitnik.ipynb
+++ b/jupyter-notebook/priprema_podaci_upitnik.ipynb
@@ -876,6 +876,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1223,7 +1224,7 @@
     "                                # poštivati ili ignorirati\n",
     "                                # malo/veliko slovo\n",
     "                                ignore.case = T)) %T>% str(.) %>%\n",
-    "psych::describe(.)"
+    "psych::describe(.) %>% print(.)"
    ]
   },
   {
@@ -1237,16 +1238,16 @@
    "outputs": [],
    "source": [
     "# base R rješenje za usporedbu\n",
-    "str(podaci[podaci$pi_gender == 'Female', qc(moralIdentityInternalization01,\n",
-    "                                                moralIdentityInternalization02,\n",
-    "                                                moralIdentityInternalization03,\n",
-    "                                                moralIdentityInternalization04,\n",
-    "                                                moralIdentityInternalization05)])\n",
-    "psych::describe(podaci[podaci$pi_gender == 'Female', qc(moralIdentityInternalization01,\n",
-    "                                                moralIdentityInternalization02,\n",
-    "                                                moralIdentityInternalization03,\n",
-    "                                                moralIdentityInternalization04,\n",
-    "                                                moralIdentityInternalization05)])"
+    "str(podaci[podaci$pi_gender == 'Female', c('moralIdentityInternalization01',\n",
+    "                                            'moralIdentityInternalization02',\n",
+    "                                            'moralIdentityInternalization03',\n",
+    "                                            'moralIdentityInternalization04',\n",
+    "                                            'moralIdentityInternalization05')])\n",
+    "psych::describe(podaci[podaci$pi_gender == 'Female', c('moralIdentityInternalization01',\n",
+    "                                                        'moralIdentityInternalization02',\n",
+    "                                                        'moralIdentityInternalization03',\n",
+    "                                                        'moralIdentityInternalization04',\n",
+    "                                                        'moralIdentityInternalization05')])"
    ]
   },
   {
@@ -1882,7 +1883,7 @@
     }
    },
    "source": [
-    "Ovdje smo iskoristili i znak `|` (kod mene se nalazi na `AltGr-W` i zove se *pipe*), koji označava alternaciju, odnosno logičko ILI. Dakle, tražimo dva ponavljanja stringa `ha` ili `he`.\n",
+    "Ovdje smo iskoristili i znak `|` (kod mene se nalazi na `AltGr-W` i zove se *pipe*), koji označava alternaciju, odnosno logičko ILI. Dakle, tražimo dva ponavljanja stringa `ha ili he`.\n",
     "\n",
     "NB: Ne stavljati razmake oko alternatora jer će se to tumačiti kao razmak koji treba tražiti u stringu!"
    ]
